--- a/views/ticket-entry.ejs
+++ b/views/ticket-entry.ejs
@@ -225,7 +225,7 @@
                          const count = parseInt(data.currentNum, 10);
                          const dif = cap - count;
                          if (dif <= 0){
-                             alert("Maximum capacity reached.");
+                             alert("Maximum capacity reached!");
                              return;
                                        }
                          else if(count <= 15 && count%5 === 0 || count <= 50 && count%10 === 0){
