--- a/views/help.ejs
+++ b/views/help.ejs
@@ -208,6 +208,7 @@
             <div class="md-col-1"></div>
         </div>
     </div>
+    <% include partials/validateLogin %>
 </body>
 
 </html>
