--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 <body>
   <div class="container  animated fadeIn">
     <div class="title float-left">
-      <h1 class="brand"><a href="/">Poolesville Event Sign Up</a></h1>
+      <h1 class="brand"><a href="/index">Poolesville Event Sign Up</a></h1>
     </div>
     <div class="help-icon float-right">
       <a href="/help"><i class="fa fa-question-circle fa-3x"></i></a>
@@ -73,6 +73,7 @@
       </div>
     </div>
   </div>
+  <% include partials/validateLogin %>
 </body>
 
 </html>
