--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -59,6 +59,7 @@
             <div class="md-col-3"></div>
         </div>
     </div>
+    <% include partials/validateLogin %>
 </body>
 
 </html>
