--- a/views/search-student.ejs
+++ b/views/search-student.ejs
@@ -160,7 +160,7 @@
 
 <body>
    <% include partials/header %>
-   <form action="/ticket-entry" id="ticket-entry-form">
+   <form action="/ticket-entry" id="ticket-entry-form" autocomplete="off">
       <div class="container mt-4 animated fadeIn">
          <div class="row">
             <div class="col-md-3">
@@ -178,7 +178,7 @@
                      <div class="card-text">
                         <div class="form-group">
                            <label>Student ID</label>
-                           <input class="form-control" id="studentID" type="number" name="studentID">
+                           <input class="form-control" id="studentID" type="number"  name="studentID">
                         </div>
                         <div class="form-group">
                            <label>Name Search:</label>
