--- a/views/ticket-entry.ejs
+++ b/views/ticket-entry.ejs
@@ -649,7 +649,7 @@
       <FORM NAME="joe">
          <INPUT TYPE="hidden" NAME="burns">
       </FORM>
-      <form name="myform">
+      <form name="myform" autocomplete="off">
          <div class="row">
             <div class="col-2">
             </div>
